--- a/WebContent/static/css/news/home.css
+++ b/WebContent/static/css/news/home.css
@@ -2734,6 +2734,12 @@
     min-height: 1500px
 }
 
+.containerabout {
+    width: 1060px;
+    margin: 10px auto;
+    min-height: 1500px
+}
+
 .container .index-channel {
     width: 110px;
     height: 600px;
